@@ -5,6 +5,7 @@
 	* Relax extension conflicts
 	* Update manual
 	* GeneralUtility::loadTCA is deprecated in TYPO3 6.1
+	* Follow-up to GeneralUtility::loadTCA is deprecated in TYPO3 6.1
 
 2013-05-22  Stanislas Rolland  <typo3@sjbr.ca>
 
